Kubernetes/autoscaling.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-deployment-autoscaling
  labels:
    app: new
    owner: admito
spec:
  selector:
    matchLabels:
      project: mossad
  template:
    metadata:
      labels:
        project: mossad
    spec:
     containers:
     - name: mossad-web
       image: admito/k8s:latest
       ports:
        - containerPort: 80
...
