Kubernetes/manifest_file_3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-app
  labels:
    env: prod
    app: main
    tier: frontend
    owner: Admito
spec:
  containers:
  - name: container-nginx
    image: nginx:latest
    ports:
    - containerPort: 80
  - name: container-api
    image: tomcat:latest
    ports:
    - containerPort: 8080
