Kubernetes/whith_deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: my-web-deployment
  labels:
    app: my-k8s-application
spec:
  selector:
    matchLabels:
      project: test
  template:
    metadata:
      labels:
        project: test
    spec:
      containers:
      - name: test-web
        image: admito/k8s:latest
        ports:
        - containerPort: 80
