Kubernetes/load_balanser.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-deployment
  labels:
    app: my-k8s-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      project: new
  template:
    metadata:
      labels:
        project: new
    spec:
      containers:
      - name: new-web
        image: admito/k8s:latest
        ports:
          - containerPort: 80
...
---
apiVersion: v1
kind: Service
metadata:
  name: my-web-service
  labels:
    env: prod
    owner: admito
spec:
  selector:
    project: new
  ports:
    - name: app-listener
      protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
...
