Kubernetes/service2-loadbalancer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web2
  labels:
    app: my-k8s-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      project: cia
  template:
    metadata:
      labels:
        project: cia
    spec:
      containers:
      - name: my-web
        image: admito/k8s:latest
        ports:
          - containerPort: 80
      - name: not-my-web
        image: tomcat:latest
        ports:
          - containerPort: 8080
...
---
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer
  labels:
    env: new
    owner: admito
spec:
  type: LoadBalancer
  selector:
    project: cia
  ports:
    - name: my-app-listener
      protocol: TCP
      port: 80
      targetPort: 80
    - name: not-my-app-listener
      protocol: TCP
      port: 8080
      targetPort: 8080
